# py-template

./: README.md  pyproject.toml  rename.sh
py-template/: config.py  settings.toml
